Step3 : 자동차 경주 (#599)
* docs: add Feature list

* test: add car test

* feat: add car

* test: add RacingGame car test

* test: add RacingGame car move test

* feat: add RacingGame car move

* feat: add game View

* style: fix space conventions

* style: fix loop cnventions

* refactor: split InputView

* refactor: magicNumber to constant

* refactor: return type

* test: fix move test

* test: fix car move test

* refactor: fix car dependency

* test: fix racingGame test

* refactr: fix car constructor dependency